
Move clear all results button to the right panel, or should we put it to the toolbar?
Can we add columns to the files list, to indicate mod. date, size, etc?
Under the files tree add a panel where we can see free space on the disks.

=========================================================================
Work in Progress:

New. The icons on the buttons on the results tab should be grayed out during search.
New. Create the installer.
Bug. Deleting files is extremely slow in some cases because every time a file is deleted the results page is been reloaded (Need to disable Results while deleting and load the page only at the end).

=========================================================================
Done:

DuplicateFileTool 1.0.816: 2022-01-07
Fix. Changed the way how the controls is enabled/disabled.
Bug. Settings is enabled while the search is in progress, should be disabled.
Bug. While an automatic selection is in progress the interface entry was enabled.
Bug. Auto select by path progress and final text was not localized.
Fix. Sorting by ascending/descending arrow need to be grayed out when the feature is disabled during search.
Bug. Results sorting order button tooltip was not set untill it's value changed.

DuplicateFileTool 1.0.787: 2021-12-15
Fix. Removed NuGet packages that was actully not used to reduce dependencies and the total size.
Fix. Optimized some texts.
Fix. Allow to select multiple rows on the errors page.
Bug. Error messages on the errors page is not localized.
Bug. Include/Exclude icon does not change in the search paths list when the value changes if the culture is not english.
Bug. List of errors does not have the localized table header.
Bug. Types of the errors on the Errors page is not localized.
New. The files in the groups is not sorted, need to sort it by path for it to be consistent over all groups.
Bug. Types of the file size entered is not localized.