@@ -569,7 +569,7 @@
                                     CornerRadius="5,5,5,5"
                                     Margin="0,0,3,0"
                                     Background="{StaticResource {x:Static SystemColors.WindowBrushKey}}">
-                                <Grid IsEnabled="{Binding Ui.Entry.Enabled}">
+                                <Grid IsEnabled="{Binding Ui.ClearResults.Enabled}">
                                     <Button Command="{Binding ClearResults}" 
                                             ToolTip="{x:Static resx:Resources.Ui_Results_Clear_Results}"
                                             Style="{StaticResource ImageButton}"
@@ -769,21 +769,52 @@
                             </Grid.RowDefinitions>
                             <Button Grid.Row="0" Height="28" Margin="2,5,2,0" HorizontalAlignment="Right" HorizontalContentAlignment="Left" MinWidth="150" Command="{Binding AutoSelectByPath}">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="Images/Add.png" Margin="5,3,5,3" RenderOptions.BitmapScalingMode="Fant" />
+                                    <Image Margin="5,3,5,3" RenderOptions.BitmapScalingMode="Fant">
+                                        <Image.Style>
+                                            <Style TargetType="{x:Type Image}">
+                                                <Setter Property="Source" Value="Images/Add.png" />
+                                                <Style.Triggers>
+                                                    <Trigger Property="IsEnabled" Value="False">
+                                                        <Setter Property="Source" Value="Images/AddGray.png" />
+                                                    </Trigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Image.Style>
+                                    </Image>
                                     <TextBlock Text="{x:Static resx:Resources.Ui_Results_Auto_select_by_path}" VerticalAlignment="Center" Margin="0,0,5,0" />
                                 </StackPanel>
                             </Button>
-
                             <Button Grid.Row="1" Height="28" Margin="2,5,2,0" HorizontalAlignment="Right" HorizontalContentAlignment="Left" MinWidth="150" Command="{Binding ResetSelection}">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="Images/Reset.png" Margin="5,3,5,3" RenderOptions.BitmapScalingMode="Fant" />
+                                    <Image Margin="5,3,5,3" RenderOptions.BitmapScalingMode="Fant">
+                                        <Image.Style>
+                                            <Style TargetType="{x:Type Image}">
+                                                <Setter Property="Source" Value="Images/Reset.png" />
+                                                <Style.Triggers>
+                                                    <Trigger Property="IsEnabled" Value="False">
+                                                        <Setter Property="Source" Value="Images/ResetGray.png" />
+                                                    </Trigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Image.Style>
+                                    </Image>
                                     <TextBlock Text="{x:Static resx:Resources.Ui_Results_Reset_selection}" VerticalAlignment="Center" Margin="0,0,5,0" />
                                 </StackPanel>
                             </Button>
-
                             <Button Grid.Row="3" Height="28" Margin="2,0,2,0" HorizontalAlignment="Right" HorizontalContentAlignment="Left" MinWidth="150" Command="{Binding DeleteMarkedFiles}">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="Images/Delete.png" Margin="5,3,5,3" RenderOptions.BitmapScalingMode="Fant" Height="14" />
+                                    <Image Margin="5,3,5,3" RenderOptions.BitmapScalingMode="Fant" Height="14">
+                                        <Image.Style>
+                                            <Style TargetType="{x:Type Image}">
+                                                <Setter Property="Source" Value="Images/Delete.png" />
+                                                <Style.Triggers>
+                                                    <Trigger Property="IsEnabled" Value="False">
+                                                        <Setter Property="Source" Value="Images/DeleteGray.png" />
+                                                    </Trigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Image.Style>
+                                    </Image>
                                     <TextBlock Text="{x:Static resx:Resources.Ui_Results_Delete_Marked_Files}" VerticalAlignment="Center" Margin="0,0,5,0" />
                                 </StackPanel>
                             </Button>
